--- a/Homeopathy.html
+++ b/Homeopathy.html
@@ -477,7 +477,7 @@ argue about (a subject), especially in a formal manner
 </section>
 <section id="section-1" class="slide level2">
 <h2></h2>
-<p><img src="../figtab/choice.png" alt="image" style="width:40.0%" /> <img src="../figtab/4corners.png" alt="image" style="width:40.0%" /></p>
+<p><img src="files/choice.png" alt="image" style="width:40.0%" /> <img src="files/4corners.png" alt="image" style="width:40.0%" /></p>
 </section>
 <section id="code-of-ethics-australia" class="slide level2">
 <h2>Code of Ethics (Australia)</h2>
