--- a/Homeopathy.html
+++ b/Homeopathy.html
@@ -473,6 +473,7 @@ argue about (a subject), especially in a formal manner
 <li>Pharmacists should <em>sell</em> homeopathy</li>
 <li>Expecting more from pharmacists when they sell complementary medicines than health stores imposes unfair costs on pharmacies.</li>
 <li>Stocking homeopathy in a pharmacy provides an implicit recommendation that it is effective</li>
+<li>Complementary medicines should be regulated in the same way as conventional medicines</li>
 </ol>
 </section>
 <section id="section-1" class="slide level2">
