Update Med lecture

--- a/RegulationDrugs.html
+++ b/RegulationDrugs.html
@@ -484,7 +484,7 @@ The University of Queensland</p></h2>
 <ul>
 <li><a href="https://www.medicalboard.gov.au/Codes-Guidelines-Policies/Code-of-conduct.aspx">Good medical practice: a code of conduct for doctors in Australia</a></li>
 <li><a href="https://ama.com.au/media/new-code-ethics-doctors">AMA Code of Ethics</a></li>
-<li>The <a href="https://alacaze.github.io/pres/RegulationDrugs.html">slides</a> presented in the lecture</li>
+<li>The <a href="https://alacaze.github.io/pres/RegulationDrugs">slides</a> presented in the lecture</li>
 </ul>
 </aside>
 </section>
@@ -538,7 +538,8 @@ Looking at your records she has been coming more regularly than you would expect
 </section>
 <section id="medical-practice-and-regulation" class="slide level2">
 <h2>Medical practice and regulation</h2>
-<p>Being a health professional well means practicing in accordance with the law.</p>
+<div style="font-size: 80%">
+<p>Being a health professional means practising in accordance with the law.</p>
 <p>Practising outside of the law puts the <em>public</em> at risk.</p>
 <p>If that is not a good enough reason; practising outside the law puts <em>you</em> at risk.</p>
 <p class="question fragment">
@@ -550,6 +551,7 @@ Risk of professional <a href="http://en.wikipedia.org/wiki/Censure">censure</a>:
 <p class="question fragment">
 Risk of prosecution in the courts for breaches of the HDPR
 </p>
+</div>
 </section>
 <section id="law-and-medicines" class="slide level2">
 <h2>Law and medicines</h2>
@@ -712,8 +714,10 @@ Some of the <strong>additional</strong> items needed on a controlled drug prescr
 <section id="further-restrictions-on-controlled-drugs" class="slide level2">
 <h2>Further restrictions on controlled drugs</h2>
 <ul>
-<li>Health professionals who are authorised to possess a controlled drug can’t self-administer it (s123)</li>
+<li>Health professionals who are authorised to possess a controlled drug can’t self-administer it (s123)
+<ul>
 <li>Unless the controlled has been prescribed (appropriately) by someone else (s123(2))</li>
+</ul></li>
 </ul>
 <p class="question">
 There are similar restrictions in the <em>Medicines and Poisons Act 2019</em>—see s40
