--- a/ResearchEthics_MPIP_PRES.html
+++ b/ResearchEthics_MPIP_PRES.html
@@ -446,6 +446,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
     <script src="files/header-attrs-2.3/header-attrs.js"></script>
     <link href="files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
     <link href="files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+    <script src="files/kePrint-0.0.1/kePrint.js"></script>
 </head>
 <body>
   <div class="reveal">
@@ -679,6 +680,54 @@ Discuss the risks and benefits of this study
 </section>
 <section id="australasian-covid-19-trial-ascot" class="slide level2">
 <h2>Australasian COVID-19 Trial (ASCOT)</h2>
+<table>
+<thead>
+<tr>
+<th style="text-align:left;">
+PICO
+</th>
+<th style="text-align:left;">
+ASCOT
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;width: 10em; ">
+Participants
+</td>
+<td style="text-align:left;width: 20em; ">
+Adult patients with confirmed SARS-CoV-2 infection who are not receiving acute intensive respiratory support.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;width: 10em; ">
+Intervention
+</td>
+<td style="text-align:left;width: 20em; ">
+Antiretroviral (Lopinavir/ritonavir), or<br />
+Antiretroviral + Hydroxychloroquine, or<br />
+Convalescent plasma
+</td>
+</tr>
+<tr>
+<td style="text-align:left;width: 10em; ">
+Comparator
+</td>
+<td style="text-align:left;width: 20em; ">
+Standard of care
+</td>
+</tr>
+<tr>
+<td style="text-align:left;width: 10em; ">
+Outcome
+</td>
+<td style="text-align:left;width: 20em; ">
+Proportion of patients alive and not having required new intensive respiratory support or vasopressors in the 28 days after randomization
+</td>
+</tr>
+</tbody>
+</table>
 <p class="question fragment">
 Discuss the risks and benefits of this study
 </p>
