--- a/ResearchEthics_MPIP_PRES.html
+++ b/ResearchEthics_MPIP_PRES.html
@@ -832,6 +832,10 @@ Two examples include: [BMJ Open Data](https://www.bmj.com/open-data) and the [Of
           transitions: false
         },
 
+        keyboard: {
+		     39: 'next', // Right Arrow
+		     37: 'prev'  // Left Arrow
+		  },
 
 
         // Optional reveal.js plugins
