Update external presentation

--- a/ExternalStudents2021S1.html
+++ b/ExternalStudents2021S1.html
@@ -2044,15 +2044,24 @@ Discuss your circumstances with the course coordinator as early as possible.
 <h1>Getting the most out of external study</h1>
 
 </section>
+<section id="get-organised" class="slide level2">
+<h2>Get organised</h2>
+<ul>
+<li>Replace the on-campus timetable with <em>your</em> timetable</li>
+<li>Work through each courses activities week to week</li>
+<li>Set yourself up for online study. Ideally, you need:
+<ul>
+<li>Reliable internet access</li>
+<li>Webcam and microphone</li>
+<li>Somewhere to be that you are happy to have your video on</li>
+</ul></li>
+</ul>
+</section>
 <section id="prioritise-tutorials" class="slide level2">
 <h2>Prioritise tutorials</h2>
 <ul>
 <li>Engage in tutorials</li>
-<li>Things that will help (especially in breakout rooms)
-<ul>
-<li>Have a working microphone and video</li>
-<li>Do your best to find a place where you are happy to have the video on</li>
-</ul></li>
+<li>Put your microphone and video ON in breakout rooms (especially)</li>
 </ul>
 <p class="question fragment">
 All lectures are recorded and some some tutorials may be recorded—-typically breakout rooms will not be recorded.
