--- a/ExternalStudents2021S1.html
+++ b/ExternalStudents2021S1.html
@@ -1968,15 +1968,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
 <section id="welcome" class="slide level2">
 <h2>Welcome</h2>
 <p>Thanks for joining me.</p>
-<p class="fragment">
-I am afraid I have to limit how much I speak….
-</p>
-<p class="fragment">
-I had a small tumour removed from my lip
-</p>
-</section>
-<section id="section" class="slide level2">
-<h2></h2>
+<!-- <p class="fragment">
+I am afraid I have to limit how much I speak....</p> -->
+<!-- <p class="fragment">I had a small tumour removed from my lip</p>
+
+## -->
 <p class="fragment">
 My plan is to work through this presentation and then open Q&amp;A on the Padlet.
 </p>
@@ -2000,7 +1996,7 @@ Feel free to post questions at any time—if I don’t address them now, I will 
 <h1>How is the School approaching external study?</h1>
 
 </section>
-<section id="section-1" class="slide level2" data-background="#4085C6">
+<section id="section" class="slide level2" data-background="#4085C6">
 <h2 data-background="#4085C6"></h2>
 <p>The following are our <strong>design principles</strong>: how we are seeking to set things up to work for external study.</p>
 </section>
@@ -2028,7 +2024,7 @@ Feel free to post questions at any time—if I don’t address them now, I will 
 For the placements that were run: most students (internal and external, domestic and international) were able to complete their placement in 2020
 </p>
 </section>
-<section id="section-2" class="slide level2">
+<section id="section-1" class="slide level2">
 <h2></h2>
 <p>Providing public health restrictions and your individual situation allows:</p>
 <ul>
