--- a/RegulationDrugs.html
+++ b/RegulationDrugs.html
@@ -443,7 +443,7 @@ style.innerHTML = style_script;
 document.getElementsByTagName('head')[0].appendChild(style);
 </script>
 
-    <script src="files/header-attrs-2.1/header-attrs.js"></script>
+    <script src="files/header-attrs-2.7/header-attrs.js"></script>
     <script src="files/kePrint-0.0.1/kePrint.js"></script>
 </head>
 <body>
@@ -455,7 +455,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
     <h2 class="author"><p>Adam La Caze<br />
 School of Pharmacy<br />
 The University of Queensland</p></h2>
-    <h3 class="date">March 2020</h3>
+    <h3 class="date">March 2021</h3>
 </section>
 
 <section id="learning-objectives" class="slide level2">
@@ -528,7 +528,7 @@ Looking at your records she has been coming more regularly than you would expect
 <ul>
 <li>Can you/should you self-prescribe tramadol?</li>
 <li>Can you/should you self-prescribe ketamine?</li>
-<li>Can you/should you prescribe hydroxychloroquine to a family member?</li>
+<li>Can you/should you prescribe hydroxychloroquine to a family member? <!-- * Can you/should you prescribe medical cannabis to a family member? --></li>
 </ul>
 </section></section>
 <section>
@@ -569,7 +569,7 @@ The nice thing about legislation is that it is written down.
 <h2>New regulations are coming!</h2>
 <p>The <em>Medicines and Poisons Act 2019</em> replaces the <em>Health Act 1937</em> and provides a framework for replacing the <em>Health (Drugs and Poisons) Regulation 1996</em>.</p>
 <p class="question">
-The new regulations will be the <em>Medicines and Poisons Regulation (Medicines Regulation)</em>. As at March 2020, this regulation is yet to be in force and the time frame for its implementation is unclear.
+The new regulations will be the <em>Medicines and Poisons Regulation (Medicines Regulation)</em>. As at March 2021, this regulation is yet to be in force and the time frame for its implementation is unclear.
 </p>
 <p>While there will be changes, there will still be much that is similar to the HDPR.</p>
 <aside class="notes">
@@ -720,7 +720,7 @@ Some of the <strong>additional</strong> items needed on a controlled drug prescr
 </ul></li>
 </ul>
 <p class="question">
-There are similar restrictions in the <em>Medicines and Poisons Act 2019</em>—see s40
+There are similar restrictions in the <em>Medicines and Poisons Act 2019</em>—see s40. The wording is slightly different: “high-risk medicine” cf controlled drug
 </p>
 <p class="question fragment">
 Additional guidance is provided in the Code of Conduct (9.2.2)
@@ -730,6 +730,10 @@ Additional guidance is provided in the Code of Conduct (9.2.2)
 <blockquote>
 <p>Good medical practice involves: …<br />
 Seeking independent, objective advice when you need medical care, and being aware of the risks of self-diagnosis and self-treatment</p>
+</blockquote>
+<p>AMA <em>Code of Ethics (2004, 2006, 2016)</em> (2.1.16):</p>
+<blockquote>
+<p>Avoid providing care to anyone with whom you have a close personal relationship, where possible</p>
 </blockquote>
 </aside>
 </section></section>
@@ -747,7 +751,7 @@ Seeking independent, objective advice when you need medical care, and being awar
 <li>Formulate a plan of action to resolve the problem</li>
 </ol>
 <aside class="notes">
-<p>A more general structure can be found in <span class="citation" data-cites="Winch:2014td">Winch, Milligan, and Rolley (2014)</span></p>
+<p>A more general structure can be found in <span class="citation" data-cites="Winch:2014td">Winch et al. (<a href="#/ref-Winch:2014td" role="doc-biblioref">2014</a>)</span></p>
 </aside>
 </section>
 <section id="a-case-1" class="slide level2" data-background="#4085C6">
@@ -755,6 +759,9 @@ Seeking independent, objective advice when you need medical care, and being awar
 <p>Samara is 35 and looks after 3 children. She suffers regular migraines, depression and anxiety. Samara presents to the practice asking for a script for her anxiety and pain tablets.</p>
 <p>She is currently taking nitrazepam, diazepam, tramadol, amitriptyline and some antibiotics for a recent upper respiratory infection.</p>
 <p>Looking at your records she has been coming more regularly than you would expect for her pain and anxiety tablets. One of your colleagues recently noted a concern that she was “relying on these medicines too much”.</p>
+<aside class="notes">
+<p></p>
+</aside>
 </section>
 <section id="responding-to-the-case" class="slide level2">
 <h2>Responding to the case</h2>
@@ -791,7 +798,7 @@ Seeking independent, objective advice when you need medical care, and being awar
 </section>
 <section id="case-outcome" class="slide level2">
 <h2>Case outcome</h2>
-<p>This example is based on one of the cases discussed in <span class="citation" data-cites="Forbes2014">Forbes (2014)</span>.</p>
+<p>This example is based on one of the cases discussed in <span class="citation" data-cites="Forbes2014">Forbes (<a href="#/ref-Forbes2014" role="doc-biblioref">2014</a>)</span>.</p>
 <p>The patient in this case died from drug misadventure with toxic levels of the anxiety and pain medications.</p>
 <p>She was identified as a patient at risk of drug misadventure by multiple prescribers and her pharmacist, but there was limited discussion between them and both continued to prescribe and dispense.</p>
 </section>
@@ -800,7 +807,7 @@ Seeking independent, objective advice when you need medical care, and being awar
 <ul>
 <li>Can you/should you self-prescribe tramadol?</li>
 <li>Can you/should you self-prescribe ketamine?</li>
-<li>Can you/should you prescribe hydroxychloroquine to a family member?</li>
+<li>Can you/should you prescribe hydroxychloroquine to a family member? <!-- * * Can you/should you prescribe medical cannabis to a family member? --></li>
 </ul>
 </section>
 <section id="further-details" class="slide level2">
@@ -876,8 +883,12 @@ HDPR, Code of conduct
 <aside class="notes">
 <p>You should have enough details from within the lecture to determine whether a medical practitioner <em>can</em> and <em>should</em> self-prescribe/prescribe these medicines in the specified context.</p>
 <p>Hydroxychloroquine is used in some patients for rheumatoid athritis as Disease Modifying Antirheumatic Drug (DMARD).</p>
-<p>It is also currently under investigation as a treatment for COVID-19. Since this has become public knowledge a lot of people have been presenting to pharmacies with prescriptions for it—including medical practitioners, dentists and nurse practitioners. See <a href="https://www.psa.org.au/prescribing-hydroxychloroquine-for-covid-19/">here</a>.</p>
-<p>This risks supply for regular patients and for investigational trials to assess its efficacy in COVID-19</p>
+<p>It has also been discussed a lot as a possible treatment for COVID-19. At the start of the pandemic a lot of people presented to pharmacies with prescriptions for it—including medical practitioners, dentists and nurse practitioners. See <a href="https://www.psa.org.au/prescribing-hydroxychloroquine-for-covid-19/">here</a> and <span class="citation" data-cites="Coombes2020">Coombes et al. (<a href="#/ref-Coombes2020" role="doc-biblioref">2020</a>)</span>.</p>
+<p>There are a host of problems here:</p>
+<ul>
+<li>Off-label use risked supply-chain problems for regular patients and for investigational trials to assess its efficacy in COVID-19</li>
+<li>The hope that hydroxycholoroquine would be effective turned out false. <span class="citation" data-cites="Gould2021">Gould &amp; Norris (<a href="#/ref-Gould2021" role="doc-biblioref">2021</a>)</span> is well worth reading. The significant interest, mixed messages, quick publications and retractions and politicisation of uncertainty regarding hydroxychloroquine is a humbling case study for anyone interested in medical evidence and public policy</li>
+</ul>
 </aside>
 </section></section>
 <section>
@@ -901,11 +912,17 @@ HDPR, Code of conduct
 <section id="references" class="slide level2 unnumbered" style="font-size: 75%;">
 <h2 class="unnumbered" style="font-size: 75%;">References</h2>
 <div id="refs" class="references hanging-indent" role="doc-bibliography">
+<div id="ref-Coombes2020">
+<p>Coombes, I., Markwell, A., Kubler, P., Redmond, A. M., McGurk, G., &amp; Roberts, J. A. (2020). Principles of ethical prescribing for self and others: Hydroxychloroquine in the covid-19 pandemic. <em>Australian Prescriber</em>, <em>43</em>(3), 76–77. <a href="https://doi.org/10.18773/austprescr.2020.030">https://doi.org/10.18773/austprescr.2020.030</a></p>
+</div>
 <div id="ref-Forbes2014">
-<p>Forbes, C. 2014. “State Coroner’s Court of New South Wales: Inquest into the deaths of Christopher SALIB, Nathan ATTARD and Shamsad AKHTAR.” State Coroner’s Court of New South Wales. <a href="http://www.coroners.justice.nsw.gov.au/Documents/doctor%20shopping%20amended%20finding.pdf">http://www.coroners.justice.nsw.gov.au/Documents/doctor shopping amended finding.pdf</a>.</p>
+<p>Forbes, C. (2014). <em>State Coroner’s Court of New South Wales: Inquest into the deaths of Christopher SALIB, Nathan ATTARD and Shamsad AKHTAR</em> (pp. 1–106). State Coroner’s Court of New South Wales. <a href="http://www.coroners.justice.nsw.gov.au/Documents/doctor%20shopping%20amended%20finding.pdf">http://www.coroners.justice.nsw.gov.au/Documents/doctor shopping amended finding.pdf</a></p>
+</div>
+<div id="ref-Gould2021">
+<p>Gould, S., &amp; Norris, S. L. (2021). Contested effects and chaotic policies: The 2020 story of (hydroxy) chloroquine for treating covid‐19. <em>Cochrane Database of Systematic Reviews</em>, <em>1</em>. <a href="https://doi.org/10.1002/14651858.ED000151">https://doi.org/10.1002/14651858.ED000151</a></p>
 </div>
 <div id="ref-Winch:2014td">
-<p>Winch, Sarah, Eleanor Milligan, and Adam Rolley. 2014. “Clinical ethics for emergency healthcare.” In <em>Emergency and Trauma Care: For Nurses and Paramedics</em>, 1–16.</p>
+<p>Winch, S., Milligan, E., &amp; Rolley, A. (2014). Clinical ethics for emergency healthcare. In <em>Emergency and trauma care: For nurses and paramedics</em> (pp. 1–16).</p>
 </div>
 </div>
 </section></section>
