update MPIP ethics

--- a/ResearchEthics_MPIP_PRES.html
+++ b/ResearchEthics_MPIP_PRES.html
@@ -443,10 +443,11 @@ style.innerHTML = style_script;
 document.getElementsByTagName('head')[0].appendChild(style);
 </script>
 
-    <script src="files/header-attrs-2.3/header-attrs.js"></script>
+    <script src="files/header-attrs-2.8/header-attrs.js"></script>
     <link href="files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
     <link href="files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
     <script src="files/kePrint-0.0.1/kePrint.js"></script>
+    <link href="files/lightable-0.0.1/lightable.css" rel="stylesheet" />
 </head>
 <body>
   <div class="reveal">
@@ -457,7 +458,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
     <h2 class="author"><p>Adam La Caze<br />
 School of Pharmacy<br />
 The University of Queensland</p></h2>
-    <h3 class="date">September 2020</h3>
+    <h3 class="date">September 2021</h3>
 </section>
 
 <section>
@@ -643,31 +644,32 @@ Must be broader than individual benefit -->
 <section id="phase-i-trial-of-imatinib-in-chronic-myeloid-leukaemia-druker2001tx" class="slide level2">
 <h2>Phase I trial of imatinib in chronic myeloid leukaemia <span class="citation" data-cites="Druker:2001tx">(Druker et al. 2001)</span></h2>
 <ul>
-<li><p>Dose escalation trial in chronic phase CML patients in whom interferon-<span class="math inline">\(\alpha\)</span> treatment had failed. Prognosis is poor, life expectancy measured in months.</p></li>
-<li><p>83 patients successively assigned to 1 of 14 dose cohorts, ranging from 25mg–1000mg per day</p></li>
-<li><p>53 of the 54 patients on <span class="math inline">\(\ge\)</span> 300mg/day had a complete haematological response (reduced WBC and platelet count maintained for four weeks). 51 of these patients maintained this response up to 265 days.</p></li>
+<li>Dose escalation trial in chronic phase CML patients in whom interferon-<span class="math inline">\(\alpha\)</span> treatment had failed. Prognosis is poor, life expectancy measured in months.</li>
 </ul>
-</section>
-<section id="section-5" class="slide level2" data-background="#4085C6">
-<h2 data-background="#4085C6"></h2>
-<p>How would you assess the risks/benefits of participating in a study in the last months of your life in which the risks are high, the effort to participate is great and the likelihood of benefit is small?</p>
+<p class="fragment">
+How would you assess the risks/benefits of participating in a study in the last months of your life in which the risks are high, the effort to participate is great and the likelihood of benefit is small?
+</p>
 <p class="fragment">
 How should an ethics committee assess these risks?
 </p>
-</section></section>
-<section>
-<section id="cases" class="title-slide slide level1">
-<h1>Cases</h1>
-
 </section>
-<section id="phase-i-first-in-humans-trial" class="slide level2">
-<h2>Phase I, first-in-humans trial</h2>
-<p><em>Anothernib</em> is a new biologic drug is being trialled in chronic myeloid leukaemia.</p>
-<p>The objectives of the trial are to determine the maximum tolerated dose and, hopefully, gain some data on the minimal effective dose.</p>
-<p>The trial will enrol patients that have failed all other treatments and have poor prognosis (life expectancy measured in months).</p>
-<p class="question fragment">
-Discuss the risks and benefits of this study
-</p>
+<section id="section-5" class="slide level2">
+<h2></h2>
+<ul>
+<li><p>83 patients successively assigned to 1 of 14 dose cohorts, ranging from 25mg–1000mg per day</p></li>
+<li><p>53 of the 54 patients on <span class="math inline">\(\ge\)</span> 300mg/day had a complete haematological response (reduced WBC and platelet count maintained for four weeks). 51 of these patients maintained this response up to 265 days.</p></li>
+</ul>
+<!-- # Cases -->
+<!-- ## Phase I, first-in-humans trial
+
+*Anothernib* is a new biologic drug is being trialled in chronic myeloid leukaemia.
+
+The objectives of the trial are to determine the maximum tolerated dose and, hopefully, gain some data on the minimal effective dose.
+
+The trial will enrol patients that have failed all other treatments and have poor prognosis (life expectancy measured in months).
+
+
+<p class="question fragment">Discuss the risks and benefits of this study</p>  -->
 <!-- ## Key considerations {data-background=#00A2C7}
 
 
@@ -680,6 +682,7 @@ Discuss the risks and benefits of this study
 </section>
 <section id="australasian-covid-19-trial-ascot" class="slide level2">
 <h2>Australasian COVID-19 Trial (ASCOT)</h2>
+<p>The <a href="https://www.ascot-trial.edu.au/">ASCOT trial</a> is an adaptive clinical trial initiated early in the pandemic to assess the effectiveness of treatments for COVID-19</p>
 <table>
 <thead>
 <tr>
@@ -832,10 +835,6 @@ Two examples include: [BMJ Open Data](https://www.bmj.com/open-data) and the [Of
           transitions: false
         },
 
-        keyboard: {
-		     39: 'next', // Right Arrow
-		     37: 'prev'  // Left Arrow
-		  },
 
 
         // Optional reveal.js plugins
