update MPIP ethics

--- a/ResearchEthics_MPIP_PRES.html
+++ b/ResearchEthics_MPIP_PRES.html
@@ -643,9 +643,10 @@ Must be broader than individual benefit -->
 </section>
 <section id="phase-i-trial-of-imatinib-in-chronic-myeloid-leukaemia-druker2001tx" class="slide level2">
 <h2>Phase I trial of imatinib in chronic myeloid leukaemia <span class="citation" data-cites="Druker:2001tx">(Druker et al. 2001)</span></h2>
-<ul>
-<li>Dose escalation trial in chronic phase CML patients in whom interferon-<span class="math inline">\(\alpha\)</span> treatment had failed. Prognosis is poor, life expectancy measured in months.</li>
-</ul>
+<p>Dose escalation trial in chronic phase CML patients in whom interferon-<span class="math inline">\(\alpha\)</span> treatment had failed. Prognosis is poor, life expectancy measured in months.</p>
+</section>
+<section id="section-5" class="slide level2" data-background="#4085C6">
+<h2 data-background="#4085C6"></h2>
 <p class="fragment">
 How would you assess the risks/benefits of participating in a study in the last months of your life in which the risks are high, the effort to participate is great and the likelihood of benefit is small?
 </p>
@@ -653,7 +654,7 @@ How would you assess the risks/benefits of participating in a study in the last 
 How should an ethics committee assess these risks?
 </p>
 </section>
-<section id="section-5" class="slide level2">
+<section id="section-6" class="slide level2">
 <h2></h2>
 <ul>
 <li><p>83 patients successively assigned to 1 of 14 dose cohorts, ranging from 25mg–1000mg per day</p></li>
