--- a/phrm3031/01-Introduction.html
+++ b/phrm3031/01-Introduction.html
@@ -2254,6 +2254,9 @@ border: 0;
 <div class="noted">
 <p>Both of these books are available online via the library. See the <a href="https://uq.rl.talis.com/courses/phrm3031.html">course reading list</a> for more suggestions.</p>
 </div>
+</section>
+<section class="slide level2">
+
 <ul>
 <li><a href="https://www.cebm.net/resources-2/">Centre for Evidence-based Medicine, Oxford</a> (these resources are very helpful)</li>
 </ul>
@@ -2296,7 +2299,7 @@ border: 0;
 <ul>
 <li><p>Each round is worth 5% of the course; total weight 20%</p></li>
 <li><p>Create your resources in the first week of the round, moderate in the second</p></li>
-<li><p>Your resource and moderation need to be effective (i.e. your research needs to pass moderation and your moderation needs to be more than “this is good”—say why it is good or how it could be improved)</p></li>
+<li><p>Your resource and moderation need to be effective (i.e. your resource needs to pass moderation and your moderation needs to be more than “this is good”—say why it is good or how it could be improved)</p></li>
 </ul>
 </div>
 </section>
