Update responsibility lecture

--- a/DispensingResponsibility_PRES.html
+++ b/DispensingResponsibility_PRES.html
@@ -1968,7 +1968,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
 </section>
 <section id="discussion" class="slide level2">
 <h2>Discussion</h2>
-<p><a href="https://apps.elearning.uq.edu.au/wordcloud/instructor/">UQwordcloud</a></p>
+<!-- [UQwordcloud](https://apps.elearning.uq.edu.au/wordcloud/instructor/) -->
 <p class="question fragment">
 What is the role of the pharmacist?
 </p>
