--- a/phrm3031/05-RCTsII.html
+++ b/phrm3031/05-RCTsII.html
@@ -2427,6 +2427,20 @@ d
 <p><span class="math display">\[ NNT = 100/ARR \]</span></p>
 <p><span class="math display">\[ NNT = 100/ARI \]</span></p>
 </section>
+<section id="hazard-ratio" class="slide level2">
+<h2>Hazard ratio</h2>
+<ul>
+<li><p>Hazard ratios are commonly reported and are a ratio of the hazard rate in the treatment group divided by the hazard rate in the control group</p></li>
+<li><p>Hazard ratios are similar to relative risk, but have the benefit that they take into consideration the amount of time a participant is <strong>exposed</strong> to the drug</p></li>
+</ul>
+</section>
+<section class="slide level2">
+
+
+<div class="noted">
+<p>The hazard rate uses the data observed in the trial to estimate the probability of a participant who is yet to experience the event, experiencing the event in the next time interval.</p>
+</div>
+</section>
 <section id="cure-measures-of-effect" class="slide level2">
 <h2>CURE, measures of effect</h2>
 <table class="table" style="margin-left: auto; margin-right: auto;">
