update case control

--- a/phrm3031/08-CaseControl.html
+++ b/phrm3031/08-CaseControl.html
@@ -2394,8 +2394,8 @@ Total
 </table>
 </div>
 <div class="column fragment" style="font-size: 90%;">
-<p><span class="math display">\[O_{cases} = \frac{a/(a+c)}{c/(a+c)} = \frac{a}{c}\]</span></p>
-<p><span class="math display">\[O_{control} = \frac{b/(b+d)}{d/(b+d)} = \frac{b}{d}\]</span></p>
+<p><span class="math display">\[O_{cases} = \frac{a}{c}\]</span></p>
+<p><span class="math display">\[O_{control} = \frac{b}{d}\]</span></p>
 <p><span class="math display">\[OR = \frac{O_{cases}}{O_{control}} = \frac{ad}{bc}\]</span></p>
 </div>
 </div>
