--- a/02-ethicsmodule.html
+++ b/02-ethicsmodule.html
@@ -443,7 +443,7 @@ style.innerHTML = style_script;
 document.getElementsByTagName('head')[0].appendChild(style);
 </script>
 
-    <script src="files/header-attrs-2.3/header-attrs.js"></script>
+    <script src="files/header-attrs-2.13/header-attrs.js"></script>
     <link href="files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
     <link href="files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 </head>
@@ -493,7 +493,7 @@ The University of Queensland</p></h2>
 </thead>
 <tbody>
 <tr class="odd">
-<td><a href="https://www.legislation.qld.gov.au/view/html/inforce/current/sl-1996-0414">HDPR</a></td>
+<td><a href="https://www.health.qld.gov.au/system-governance/licences/medicines-poisons/medicines-poisons-act/legislation-standards">MPMR</a></td>
 <td>Drug/medicine regulations for QLD</td>
 </tr>
 <tr class="even">
@@ -518,9 +518,6 @@ The University of Queensland</p></h2>
 </tr>
 </tbody>
 </table>
-<aside class="notes">
-<p>The <em>Health (Drugs and Poisons) Regulations</em> are due to be replaced by the <em>Medicines and Poisons Regulation (Medicines Regulation)</em>. This process is well under way, but it is unclear exactly when the change will occur.</p>
-</aside>
 </section>
 <section id="key-concepts" class="slide level2">
 <h2>Key concepts</h2>
@@ -770,7 +767,7 @@ See <a href="https://www.oaic.gov.au/privacy-law/privacy-act/notifiable-data-bre
 <section id="what-is-a-data-breach-and-who-needs-to-notify" class="slide level2">
 <h2>What is a data breach and who needs to notify</h2>
 <p><a href="https://www.oaic.gov.au/privacy-law/privacy-act/notifiable-data-breaches-scheme/identifying-eligible-data-breaches">Data breaches</a> occur whenever there is unauthorised access, disclosure or loss of data from an APP entity.</p>
-<p>Community pharmacies (and consultant pharmacists) are <a href="https://www.oaic.gov.au/agencies-and-organisations/faqs-for-agencies-orgs/health-service-providers/is-my-organisation-a-health-service-provider">private health services providers</a>—this means they have responsibilities under the <em>Privacy Act</em> and the notifiable data breaches scheme.</p>
+<p>Community pharmacies (and consultant pharmacists) are <a href="https://www.oaic.gov.au/privacy/privacy-for-health-service-providers">private health services providers</a>—this means they have responsibilities under the <em>Privacy Act</em> and the notifiable data breaches scheme.</p>
 </section>
 <section id="which-data-breaches-require-notification" class="slide level2">
 <h2>Which data breaches require notification</h2>
