--- a/phrm3031/01-Introduction.html
+++ b/phrm3031/01-Introduction.html
@@ -7436,6 +7436,14 @@ Mechanism-based reasoning
   })();
 </script>
 
+<script>
+     Reveal.configure({
+      keyboard: {
+     39: 'next', // Right Arrow
+     37: 'prev'  // Left Arrow
+  }
+});
+</script>
 
   </body>
 </html>
