--- a/phrm3031/02-WhatWorks.html
+++ b/phrm3031/02-WhatWorks.html
@@ -1958,7 +1958,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
 <section>
     <h1 class="title">How do we determine what works?</h1>
     <h2 class="author">Adam La Caze</h2>
-    <h3 class="date">Semester 1, 2022</h3>
+    <h3 class="date">Semester 1, 2023</h3>
 </section>
 
 <section id="objectives" class="slide level2">
@@ -7053,6 +7053,14 @@ document.addEventListener('DOMContentLoaded', function(e) {
   })();
 </script>
 
+<script>
+     Reveal.configure({
+      keyboard: {
+     39: 'next', // Right Arrow
+     37: 'prev'  // Left Arrow
+  }
+});
+</script>
 
   </body>
 </html>
