update clinic drug development

--- a/mpip/ClinDrugDev_PRES.html
+++ b/mpip/ClinDrugDev_PRES.html
@@ -7403,6 +7403,14 @@ Committee Meeting</span>.”</span> <a href="https://www.fda.gov/downloads/Advis
   })();
 </script>
 
+<script>
+     Reveal.configure({
+      keyboard: {
+     39: 'next', // Right Arrow
+     37: 'prev'  // Left Arrow
+  }
+});
+</script>
 
   </body>
 </html>
